# youtube-music-mcp

./: .gitignore  CLAUDE.md  ENDPOINTS.md  Procfile  README.md  install.py  oauth.json.example  pyproject.toml  railway.json  refresh_token.sh  requirements.txt  run_server.py
src/: __init__.py  auth.py  server.py  server_remote.py  ytmusic_client.py
tests/: __init__.py  test_ytmusic_client.py
