[project]
name = "youtube-music-mcp"
version = "0.1.0"
description = "MCP server for YouTube Music integration"
requires-python = ">=3.10"
dependencies = [
    "ytmusicapi>=1.7.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
